--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <script src="./assets/script/script.js"></script>
 
     <!-- Moment Js -->
-    s <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
 </body>
 
